--- a/day1-am/Phishing_Prediction_NB_Exercise.ipynb
+++ b/day1-am/Phishing_Prediction_NB_Exercise.ipynb
@@ -24,11 +24,11 @@
    },
    "source": [
     "# Phishing Prediction Exercise using Naive Bayes\n",
-    "In this workshop, we will be working with a Phishing Dataset to train a Naive Bayes model. \n",
+    "In this lab, we will be working with a Phishing Dataset to train a Naive Bayes model. \n",
     "\n",
     "There are some parts that requires your input and some blanks indicated with **None** for you to fill in.\n",
     "\n",
-    "This workshop is very similiar to the Malware Classification, except that we are using a different dataset and well as a different algorithm."
+    "This lab is very similiar to the Malware Prediction, except that we are using a different dataset and a different algorithm."
    ]
   },
   {
