--- a/day1-am/Phishing_Prediction_NB_Exercise.ipynb
+++ b/day1-am/Phishing_Prediction_NB_Exercise.ipynb
@@ -23,7 +23,7 @@
     "id": "PnkQStr-AVh4"
    },
    "source": [
-    "# Phishing Prediction Exercise using Naive Bayes\n",
+    "# Phishing Prediction Exercise using Naive Bayes (Exercise)\n",
     "In this lab, we will be working with a Phishing Dataset to train a Naive Bayes model. \n",
     "\n",
     "There are some parts that requires your input and some blanks indicated with **None** for you to fill in.\n",
@@ -69,8 +69,7 @@
     "# Ex1a: Load the data\n",
     "data_dir_path = None\n",
     "file_name = None\n",
-    "df = pd.read_csv(None)\n",
-    "df.head(5)"
+    "df = pd.read_csv(None)"
    ]
   },
   {
