--- a/day1-am/Lab02b_Phishing_Prediction_Answer.ipynb
+++ b/day1-am/Lab02b_Phishing_Prediction_Answer.ipynb
@@ -65,7 +65,7 @@
         "\n",
         "There are some parts that requires your input and some blanks indicated with **None** for you to fill in.\n",
         "\n",
-        "This lab is very similiar to the Malware Prediction, except that we are using a different dataset and a different algorithm."
+        "This lab is very similiar to the Malware Prediction, except that we are using a different dataset."
       ]
     },
     {
