update to sklearn 1.2

--- a/day1-am/Lab02b_Phishing_Prediction_Answer.ipynb
+++ b/day1-am/Lab02b_Phishing_Prediction_Answer.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +50,7 @@
         "2. You can execute code cells by clicking the ```Run``` icon in the menu, or via the following keyboard shortcuts ```Shift-Enter``` (run and advance) or ```Ctrl-Enter``` (run and stay in the current cell).\n",
         "\n",
         "3. To interrupt cell execution, click the ```Stop``` button on the toolbar or navigate to the ```Kernel``` menu, and select ```Interrupt ```.\n",
-        "    "
+        ""
       ]
     },
     {
@@ -61,7 +60,7 @@
       },
       "source": [
         "# Phishing Prediction Exercise using K-Nearest Neighbour (Answer)\n",
-        "In this lab, we will be working with a Phishing Dataset to train a K-Nearest Neighbour (KNN). \n",
+        "In this lab, we will be working with a Phishing Dataset to train a K-Nearest Neighbour (KNN).\n",
         "\n",
         "There are some parts that requires your input and some blanks indicated with **None** for you to fill in.\n",
         "\n",
@@ -236,7 +235,7 @@
       },
       "source": [
         "# Ex2c: Use a statistical graph to visualise the data above -- answer\n",
-        "sns.countplot(df[\"Result\"])\n",
+        "sns.countplot(x=df[\"Result\"])\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -426,7 +425,8 @@
       },
       "source": [
         "# Ex5c: Display Confusion Matrix and accuracy -- answer\n",
-        "print('Confusion Matrix: \\n',confusion_matrix(y_train,pred))\n",
+        "cm = confusion_matrix(y_train, pred)\n",
+        "print('Confusion Matrix: \\n',cm)\n",
         "print()\n",
         "print('Accuracy: ', accuracy_score(y_train,pred))"
       ],
@@ -440,17 +440,14 @@
       },
       "source": [
         "# Ex5c (optional): Plot the Confusion Matrix for easy visualisation -- answer\n",
-        "from sklearn.metrics import plot_confusion_matrix\n",
-        "titles_options = [(\"Confusion matrix for training data\", None)]\n",
-        "for title, normalize in titles_options:\n",
-        "    disp = plot_confusion_matrix(model, x_train, y_train,\n",
-        "                                 display_labels=None,\n",
-        "                                 cmap=plt.cm.Blues,\n",
-        "                                 values_format='')\n",
-        "    disp.ax_.set_title(title)\n",
+        "from sklearn.metrics import ConfusionMatrixDisplay\n",
         "\n",
-        "    print(title)\n",
+        "ConfusionMatrixDisplay.from_estimator(model, x_train, y_train,\n",
+        "                                          labels=model.classes_,\n",
+        "                                          cmap=plt.cm.Blues,\n",
+        "                                          values_format='')\n",
         "\n",
+        "plt.title(\"Confusion matrix for training data\")\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -469,18 +466,27 @@
         "print()\n",
         "print('Accuracy: ', accuracy_score(y_test,pred))\n",
         "print()\n",
-        "titles_options = [(\"Confusion matrix for testing data\", None)]\n",
-        "for title, normalize in titles_options:\n",
-        "    disp = plot_confusion_matrix(model, x_test, y_test,\n",
-        "                                 display_labels=None,\n",
-        "                                 cmap=plt.cm.Blues,\n",
-        "                                 values_format='')\n",
-        "    disp.ax_.set_title(title)\n",
         "\n",
-        "    print(title)\n",
         "\n",
+        "from sklearn.metrics import ConfusionMatrixDisplay\n",
+        "\n",
+        "ConfusionMatrixDisplay.from_estimator(model, x_test, y_test,\n",
+        "                                          labels=model.classes_,\n",
+        "                                          cmap=plt.cm.Blues,\n",
+        "                                          values_format='')\n",
+        "\n",
+        "plt.title(\"Confusion matrix for test data\")\n",
         "plt.show()"
       ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "t8lZ-t7a3pg6"
+      },
       "execution_count": null,
       "outputs": []
     }
