update to sklearn 1.2

--- a/day1-am/Lab02a_Phishing_Prediction_Exercise.ipynb
+++ b/day1-am/Lab02a_Phishing_Prediction_Exercise.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +50,7 @@
         "2. You can execute code cells by clicking the ```Run``` icon in the menu, or via the following keyboard shortcuts ```Shift-Enter``` (run and advance) or ```Ctrl-Enter``` (run and stay in the current cell).\n",
         "\n",
         "3. To interrupt cell execution, click the ```Stop``` button on the toolbar or navigate to the ```Kernel``` menu, and select ```Interrupt ```.\n",
-        "    "
+        ""
       ]
     },
     {
@@ -61,7 +60,7 @@
       },
       "source": [
         "# Phishing Prediction Exercise using K-Nearest Neighbour (Exercise)\n",
-        "In this lab, we will be working with a Phishing Dataset to train a K-Nearest Neighbour (KNN) model. \n",
+        "In this lab, we will be working with a Phishing Dataset to train a K-Nearest Neighbour (KNN) model.\n",
         "\n",
         "There are some parts that requires your input and some blanks indicated with **None** for you to fill in.\n",
         "\n",
@@ -299,7 +298,7 @@
         "id": "na5zeYeUCDhC"
       },
       "source": [
-        "# Ex4a: spilt the data "
+        "# Ex4a: spilt the data"
       ],
       "execution_count": null,
       "outputs": []
@@ -426,7 +425,8 @@
       },
       "source": [
         "# Ex5c (optional): Plot the Confusion Matrix for easy visualisation\n",
-        "from sklearn.metrics import plot_confusion_matrix\n"
+        "from sklearn.metrics import ConfusionMatrixDisplay\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": []
